--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<groupId>ru.create.doc</groupId>
 	<artifactId>CreateReportAndContract</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<build>
 		<plugins>
 			<plugin>
@@ -17,9 +18,6 @@
 					<target>7</target>
 				</configuration>
 			</plugin>
-		<!--</plugins>-->
-
-		<!--<plugins>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
