--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+	<resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/schedule</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 	<!--<servlets>-->
 		<!--<servlets-name>Servlet</servlets-name>-->
 		<!--<servlets-class>HelloServlet</servlets-class>-->
