--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-	<resource-ref>
-		<description>DB Connection</description>
-		<res-ref-name>jdbc/schedule</res-ref-name>
-		<res-type>javax.sql.DataSource</res-type>
-		<res-auth>Container</res-auth>
-	</resource-ref>
+
 	<!--<servlets>-->
-		<!--<servlets-name>Servlet</servlets-name>-->
+		<!--<servlets-name>ServletUpload</servlets-name>-->
 		<!--<servlets-class>HelloServlet</servlets-class>-->
 	<!--</servlets>-->
 
@@ -19,22 +14,22 @@
 		<!--<servlets-name>/servlets</servlets-name>-->
 		<!--<url-pattern>/welcome</url-pattern>-->
 	<!--</servlets-mapping>-->
-	<filter>
-		<filter-name>AuthFilter</filter-name>
-		<filter-class>servlets.filter.AuthFilter</filter-class>
-	</filter>
+	<!--<filter>-->
+		<!--<filter-name>AuthFilter</filter-name>-->
+		<!--<filter-class>servlets.filter.AuthFilter</filter-class>-->
+	<!--</filter>-->
 
-	<filter-mapping>
-		<filter-name>AuthFilter</filter-name>
-		<url-pattern>/</url-pattern>
-	</filter-mapping>
+	<!--<filter-mapping>-->
+		<!--<filter-name>AuthFilter</filter-name>-->
+		<!--<url-pattern>/</url-pattern>-->
+	<!--</filter-mapping>-->
 
-	<servlet>
-		<servlet-name>LogoutServlet</servlet-name>
-		<servlet-class>servlets.servlet.LogoutServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LogoutServlet</servlet-name>
-		<url-pattern>/logout</url-pattern>
-	</servlet-mapping>
+	<!--<servletUpload>-->
+		<!--<servletUpload-name>LogoutServlet</servletUpload-name>-->
+		<!--<servletUpload-class>servlets.servletUploadUpload.LogoutServlet</servletUpload-class>-->
+	<!--</servletUpload>-->
+	<!--<servletUpload-mapping>-->
+		<!--<servletUpload-name>LogoutServlet</servletUpload-name>-->
+		<!--<url-pattern>/logout</url-pattern>-->
+	<!--</servletUpload-mapping>-->
 </web-app>
