--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,27 @@
 		<version>3.1.0</version>
 	</dependency>
 
+	<!--<dependency>-->
+		<!--<groupId>org.slf4j</groupId>-->
+		<!--<artifactId>slf4j-api</artifactId>-->
+		<!--<version>2.0.0-alpha1</version>-->
+	<!--</dependency>-->
+	<!--<dependency>-->
+		<!--<groupId>org.slf4j</groupId>-->
+		<!--<artifactId>slf4j-api</artifactId>-->
+		<!--<version>1.8.0-beta4</version>-->
+	<!--</dependency>-->
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.7.26</version>
+	</dependency>
+
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-jdk14</artifactId>
+		<version>1.7.26</version>
+	</dependency>
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi</artifactId>
@@ -58,6 +79,7 @@
 		<artifactId>xmlbeans</artifactId>
 		<version>2.6.0</version>
 	</dependency>
+
 	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
