--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,24 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-
+	<!--описание ресурса специальным набором тегов-->
+	<display-name>PoolDB</display-name>
+	<resource-ref>
+		<description>DB Connection</description>  <!--какое то описание-->
+		<res-ref-name>jdbc/schedule</res-ref-name> <!--то имя, через которое будем искать данный ресурс-->
+		<!--
+		1. DataSource (интерфейс)- ссылка на ресурс, который предназначен для работы с пуллом коннектов.
+		2. Работать ресурс будет с указанным именем, <res-ref-name>
+		3. Ресурс создаётся не внутри приложения, он создается на самом сервере, у каждого сервера создание по своей
+		документации
+		-->
+		<res-type>javax.sql.DataSource</res-type>
+		<!--
+		авторизация к пулл коннект содержится не внутри приложения,
+		об этом позаботится сам сервер
+		-->
+		<res-auth>Container</res-auth>
+	</resource-ref>
 	<!--<servlets>-->
 		<!--<servlets-name>ServletUpload</servlets-name>-->
 		<!--<servlets-class>HelloServlet</servlets-class>-->
