--- a/pom.xml
+++ b/pom.xml
@@ -56,23 +56,57 @@
 		<artifactId>slf4j-jdk14</artifactId>
 		<version>1.7.26</version>
 	</dependency>
+
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi</artifactId>
-		<version>3.11</version>
+		<version>3.17</version>
 	</dependency>
 
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi-ooxml</artifactId>
-		<version>3.11</version>
+		<version>3.17</version>
 	</dependency>
 
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>poi-ooxml-schemas</artifactId>
-		<version>3.11</version>
+		<version>3.17</version>
 	</dependency>
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi</artifactId>-->
+		<!--<version>4.0.0</version>-->
+	<!--</dependency>-->
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi-ooxml</artifactId>-->
+		<!--<version>4.0.0</version>-->
+	<!--</dependency>-->
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi-ooxml-schemas</artifactId>-->
+		<!--<version>4.0.0</version>-->
+	<!--</dependency>-->
+
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi</artifactId>-->
+		<!--<version>4.1.2</version>-->
+	<!--</dependency>-->
+
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi-ooxml</artifactId>-->
+		<!--<version>4.1.2</version>-->
+	<!--</dependency>-->
+
+	<!--<dependency>-->
+		<!--<groupId>org.apache.poi</groupId>-->
+		<!--<artifactId>poi-ooxml-schemas</artifactId>-->
+		<!--<version>4.1.2</version>-->
+	<!--</dependency>-->
 <!--org.apache.poi ooxml-schemas 1.4 альбомная ориентация-->
 	<!--<dependency>-->
 		<!--<groupId>org.apache.poi</groupId>-->
