--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 		<artifactId>ooxml-schemas</artifactId>
 		<version>1.4</version>
 	</dependency>
+	<dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.17</version>
+	</dependency>
 
 	<!--
 		<dependency>
