--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,52 +1,45 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-                      http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
-	<!--описание ресурса специальным набором тегов-->
-	<display-name>PoolDB</display-name>
-	<resource-ref>
-		<description>DB Connection</description>  <!--какое то описание-->
-		<res-ref-name>jdbc/schedule</res-ref-name> <!--то имя, через которое будем искать данный ресурс-->
-		<!--
-		1. DataSource (интерфейс)- ссылка на ресурс, который предназначен для работы с пуллом коннектов.
-		2. Работать ресурс будет с указанным именем, <res-ref-name>
-		3. Ресурс создаётся не внутри приложения, он создается на самом сервере, у каждого сервера создание по своей
-		документации
-		-->
-		<res-type>javax.sql.DataSource</res-type>
-		<!--
-		авторизация к пулл коннект содержится не внутри приложения,
-		об этом позаботится сам сервер
-		-->
-		<res-auth>Container</res-auth>
-	</resource-ref>
-	<!--<servlets>-->
-		<!--<servlets-name>ServletUpload</servlets-name>-->
-		<!--<servlets-class>HelloServlet</servlets-class>-->
-	<!--</servlets>-->
+<web-app xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance" xmlns="https://java.sun.com/xml/ns/javaee"
+         xsi:schemaLocation="https://java.sun.com/xml/ns/javaee https://java.sun.com/xml/ns/javaee/web-app_3_0.xsd
+https://java.sun.com/xml/ns/javaee " id="WebApp_ID" version="3.0">
+	<display-name>ServletDBLog4jExample</display-name>
+	<welcome-file-list>
+		<welcome-file>login.html</welcome-file>
+	</welcome-file-list>
+	<context-param>
+		<param-name>dbUser</param-name>
+		<param-value>postgres</param-value>
+	</context-param>
+	<context-param>
+		<param-name>dbPassword</param-name>
+		<param-value>alex159</param-value>
+	</context-param>
+	<context-param>
+		<param-name>dbURL</param-name>
+		<param-value>jdbc:postgresql://localhost:5432/postgres</param-value>
+	</context-param>
+	<context-param>
+		<param-name>log4j-config</param-name>
+		<param-value>WEB-INF/log4j.xml</param-value>
+	</context-param>
 
-	<!--<servlets-mapping>-->
-		<!--<servlets-name>/servlets</servlets-name>-->
-		<!--<url-pattern>/welcome</url-pattern>-->
-	<!--</servlets-mapping>-->
-	<!--<filter>-->
-		<!--<filter-name>AuthFilter</filter-name>-->
-		<!--<filter-class>servlets.filter.AuthFilter</filter-class>-->
-	<!--</filter>-->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/AppErrorHandler</location>
+	</error-page>
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+		<location>/AppErrorHandler</location>
+	</error-page>
 
-	<!--<filter-mapping>-->
-		<!--<filter-name>AuthFilter</filter-name>-->
-		<!--<url-pattern>/</url-pattern>-->
-	<!--</filter-mapping>-->
+	<filter>
+		<filter-name>AuthenticationFilter</filter-name>
+		<filter-class>servlets.servletFilters.AuthenticationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthenticationFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
-	<!--<servletUpload>-->
-		<!--<servletUpload-name>LogoutServlet</servletUpload-name>-->
-		<!--<servletUpload-class>servlets.servletUploadUpload.LogoutServlet</servletUpload-class>-->
-	<!--</servletUpload>-->
-	<!--<servletUpload-mapping>-->
-		<!--<servletUpload-name>LogoutServlet</servletUpload-name>-->
-		<!--<url-pattern>/logout</url-pattern>-->
-	<!--</servletUpload-mapping>-->
 </web-app>
