--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 	<dependency>
 		<groupId>org.postgresql</groupId>
 		<artifactId>postgresql</artifactId>
-		<version>VERSION</version>
+		<version>42.2.18</version>
 	</dependency>
 
 	<dependency>
