--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 		<artifactId>ooxml-schemas</artifactId>
 		<version>1.4</version>
 	</dependency>
+	<dependency>
+		<groupId>org.apache.struts</groupId>
+		<artifactId>struts-core</artifactId>
+		<version>1.3.8</version>
+	</dependency>
 </dependencies>
 
 </project>
