--- a/src/main/resources/usersKey.properties
+++ b/src/main/resources/usersKey.properties
@@ -2,3 +2,4 @@ db.url=jdbc:postgresql://localhost:5432/raspisanie
 db.username=postgres
 db.password=alex159
 db.driverClassName=org.postgresql.Driver
+files.storage =d:/
