--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
 		<version>42.2.18</version>
 	</dependency>
 
-	<dependency>
-		<groupId>log4j</groupId>
-		<artifactId>log4j</artifactId>
-		<version>1.2.17</version>
-	</dependency>
+	<!--<dependency>-->
+		<!--<groupId>log4j</groupId>-->
+		<!--<artifactId>log4j</artifactId>-->
+		<!--<version>1.2.17</version>-->
+	<!--</dependency>-->
 	<dependency>
 		<groupId>org.apache.poi</groupId>
 		<artifactId>ooxml-schemas</artifactId>
